# libcosmo_plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yml  test_single.yml
include/: LockingQueue.hpp  cosmo_dlrpc.hpp  cosmo_plugin.hpp  cosmo_rpc.hpp  nlohmann  rfl  rfl.hpp
src/: cosmo_dlrpc.cpp  cosmo_plugin.cpp  cosmo_rpc.cpp
tests/: run.sh
tests/bidirectional/: main.cpp
tests/large/: main.cpp  run.sh
tests/signed-unsigned/: main.cpp
tests/simple/: .gitignore  CMakeLists.txt  main.cpp  run.sh
tests/stress/: CMakeLists.txt  main.cpp
